--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "pabloveintimilla/mautic-amazon-ses",
-    "description": "Mautic 5 plugin that provides Amazon SES as an email transport and callback to process bounces",
+    "description": "Mautic 5/6 plugin that provides Amazon SES as an email transport and callback to process bounces",
     "type": "mautic-plugin",
     "require": {
-        "php": ">=8.0.0",
-        "mautic/core-lib": "^5.0",        
-        "symfony/amazon-mailer": "^6.0",
+        "php": ">=8.1.0",
+        "mautic/core-lib": "^5.1 || ^6.0"     
+        "symfony/amazon-mailer": "^6.4",
         "teknasyon-teknoloji/aws-ses-notification": "^2.0"
     },
     "license": "GPL-3.0-or-later",
